build the project

--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/App.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:MSDN_Magazine_To_PDF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/LightBlue.xaml"/>
+
+                <ResourceDictionary Source="Style/ListBoxStyle.xaml"/>
+                <ResourceDictionary Source="Style/ExpanderStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
