--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MainWindow.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MainWindow.xaml
@@ -6,45 +6,47 @@
         xmlns:local="clr-namespace:MSDN_Magazine_To_PDF"
         xmlns:blur="clr-namespace:TianXiaTech;assembly=BlurWindow"
         mc:Ignorable="d"
-        Height="720" Width="1280" Background="White">
+        Height="720" Width="1280" Background="{DynamicResource BaseBackgroundColor}">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
 
-        <Grid Background="#FF4C99C9">
-            <Label Content="MSDN-Magazine-To-PDF" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" Margin="10,0,0,0"/>
+
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Background="{DynamicResource BaseColor}">
+            <StackPanel>
+                <Expander Header="2019" Style="{StaticResource ExpanderStyle}">
+                    <ListBox Style="{StaticResource ListBoxStyle}">
+                        <ListBoxItem Content="January"/>
+                        <ListBoxItem Content="Feb"/>
+                    </ListBox>
+                </Expander>
+                <Expander Header="2018" Style="{StaticResource ExpanderStyle}"></Expander>
+                <Expander Header="2017" Style="{StaticResource ExpanderStyle}"></Expander>
+            </StackPanel>
         </Grid>
-
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="3*"/>
-            </Grid.ColumnDefinitions>
-
-            <Grid>
-                <ListBox Margin="3"/>
-            </Grid>
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Center"
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Center"
               VerticalAlignment="Stretch"
               Background="#FF4C99C9" 
               ShowsPreview="True"
               Width="3"/>
-            <Grid Grid.Column="2">
-                <ListBox Grid.Column="2" Margin="3"/>
-            </Grid>
-            <GridSplitter Grid.Column="3" HorizontalAlignment="Center"
+        <Grid Grid.Column="2">
+            <ListBox Grid.Column="2" Margin="3" Style="{StaticResource ListBoxStyle}"/>
+        </Grid>
+        <GridSplitter Grid.Column="3" HorizontalAlignment="Center"
               VerticalAlignment="Stretch"
               Background="#FF4C99C9" 
               ShowsPreview="True"
               Width="3"/>
-            <Grid>
-                <Frame Grid.Column="4"/>
-            </Grid>
+        <Grid>
+            <Frame Grid.Column="4"/>
         </Grid>
+
     </Grid>
 </blur:BlurWindow>
