--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MainWindow.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MainWindow.xaml
@@ -21,6 +21,7 @@
 
         <Grid Background="{DynamicResource BaseColor}">
             <StackPanel>
+                <Label Content=" MSDN-Magazine-To-PDF" FontSize="19" Margin="0,10" Foreground="{DynamicResource BaseWhite}" FontWeight="Bold" FontFamily="Arial"/>
                 <Expander Header="2019" Style="{StaticResource ExpanderStyle}">
                     <ListBox Style="{StaticResource ListBoxStyle}">
                         <ListBoxItem Content="January"/>
