--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/App.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="MSDN_Magazine_To_PDF.App"
+﻿<prism:PrismApplication x:Class="MSDN_Magazine_To_PDF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MSDN_Magazine_To_PDF"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/"
+             >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -13,4 +14,4 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
