--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/Views/MainWindow.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/Views/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<blur:BlurWindow x:Class="MSDN_Magazine_To_PDF.MainWindow"
+﻿<blur:BlurWindow x:Class="MSDN_Magazine_To_PDF.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSDN_Magazine_To_PDF"
         xmlns:blur="clr-namespace:TianXiaTech;assembly=BlurWindow"
+        xmlns:prism="http://prismlibrary.com/"
         mc:Ignorable="d"
-        Height="720" Width="1280" Background="{DynamicResource BaseBackgroundColor}">
+        Height="720" Width="1280" Background="{DynamicResource BaseBackgroundColor}" 
+        prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
 
 
@@ -38,7 +40,7 @@
               ShowsPreview="True"
               Width="3"/>
         <Grid Grid.Column="2">
-            <ListBox Grid.Column="2" Margin="3" Style="{StaticResource ListBoxStyle}"/>
+            <ListBox Grid.Column="2" Margin="3" Style="{StaticResource ListBoxStyle}" ItemsSource="{Binding MagazineList}"/>
         </Grid>
         <GridSplitter Grid.Column="3" HorizontalAlignment="Center"
               VerticalAlignment="Stretch"
