--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/Views/MainWindow.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/Views/MainWindow.xaml
@@ -25,9 +25,8 @@
             <StackPanel>
                 <Label Content=" MSDN-Magazine-To-PDF" FontSize="19" Margin="0,10" Foreground="{DynamicResource BaseWhite}" FontWeight="Bold" FontFamily="Arial"/>
                 <Expander Header="2019" Style="{StaticResource ExpanderStyle}">
-                    <ListBox Style="{StaticResource ListBoxStyle}">
-                        <ListBoxItem Content="January"/>
-                        <ListBoxItem Content="Feb"/>
+                    <ListBox Style="{StaticResource ListBoxStyle}" ItemsSource="{Binding MagazineList}">
+                      
                     </ListBox>
                 </Expander>
                 <Expander Header="2018" Style="{StaticResource ExpanderStyle}"></Expander>
@@ -40,7 +39,21 @@
               ShowsPreview="True"
               Width="3"/>
         <Grid Grid.Column="2">
-            <ListBox Grid.Column="2" Margin="3" Style="{StaticResource ListBoxStyle}" ItemsSource="{Binding MagazineList}"/>
+            <ListBox Grid.Column="2" Margin="3" ItemsSource="{Binding MagazineList}" Name="list">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="200"/>
+                                <RowDefinition Height="30"/>
+                            </Grid.RowDefinitions>
+
+                            <Image Source="{Binding CoverUrl}" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                            <Label Content="{Binding Title}" Grid.Row="2" HorizontalAlignment="Center"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Grid>
         <GridSplitter Grid.Column="3" HorizontalAlignment="Center"
               VerticalAlignment="Stretch"
