--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/Views/MainWindow.xaml
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:prism="http://prismlibrary.com/"
         mc:Ignorable="d"
         Height="720" Width="1280" Background="{DynamicResource BaseBackgroundColor}" 
-        prism:ViewModelLocator.AutoWireViewModel="True">
+        prism:ViewModelLocator.AutoWireViewModel="True" Name="main">
     <Grid>
 
 
@@ -24,9 +24,11 @@
         <Grid Background="{DynamicResource BaseColor}">
             <StackPanel>
                 <Label Content=" MSDN-Magazine-To-PDF" FontSize="19" Margin="0,10" Foreground="{DynamicResource BaseWhite}" FontWeight="Bold" FontFamily="Arial"/>
-                <ItemsControl ItemsSource="{Binding MonthList}">
-                    
-                </ItemsControl>
+                <ScrollViewer  ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ItemsControl ItemsSource="{Binding YearList}">
+
+                    </ItemsControl>
+                </ScrollViewer>
             </StackPanel>
         </Grid>
         <GridSplitter Grid.Column="1" HorizontalAlignment="Center"
